@@ -206,29 +206,29 @@
       (setq dotemacs-path path1))
     (find-file dotemacs-path)))
 
-;; (defun move-line-up (p)
-;;   "Move current line up, copy from crazycool@smth"
-;;   (interactive "*p")
-;;   (let ((c (current-column)))
-;;     (beginning-of-line)
-;;     (kill-line 1)
-;;     (previous-line p)
-;;     (beginning-of-line)
-;;     (yank)
-;;     (previous-line 1)
-;;     (move-to-column c)))
+(defun move-line-up (p)
+  "Move current line up, copy from crazycool@smth"
+  (interactive "*p")
+  (let ((c (current-column)))
+    (beginning-of-line)
+    (kill-line 1)
+    (previous-line p)
+    (beginning-of-line)
+    (yank)
+    (previous-line 1)
+    (move-to-column c)))
 
-;; (defun move-line-down (p)
-;;   "Move current line down, copy from crazycool@smth"
-;;   (interactive "*p")
-;;   (let ((c (current-column)))
-;;     (beginning-of-line)
-;;     (kill-line 1)
-;;     (next-line p)
-;;     (beginning-of-line)
-;;     (yank)
-;;     (previous-line 1)
-;;     (move-to-column c)))
+(defun move-line-down (p)
+  "Move current line down, copy from crazycool@smth"
+  (interactive "*p")
+  (let ((c (current-column)))
+    (beginning-of-line)
+    (kill-line 1)
+    (next-line p)
+    (beginning-of-line)
+    (yank)
+    (previous-line 1)
+    (move-to-column c)))
 
 (defun format-region ()
   "Format region, if no region actived, format current buffer.
@@ -296,8 +296,8 @@ Like eclipse's Ctrl+Alt+F."
     (pulse-momentary-highlight-one-line (point))))
 
 ;; global key bindings
-;; (global-set-key (kbd "<M-up>") 'move-line-up)
-;; (global-set-key (kbd "<M-down>") 'move-line-down)
+(global-set-key (kbd "<M-up>") 'move-line-up)
+(global-set-key (kbd "<M-down>") 'move-line-down)
 (global-set-key (kbd "<select>") 'move-end-of-line) ; for putty
 (global-set-key (kbd "C-=") 'align)
 (global-set-key (kbd "C-S-u") 'upcase-region)
